Added new components and added new routes

--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,11 @@
         <link
             rel="icon"
             type="image/png"
-            href="favicon-16x16.png">
+            href="assets/images/logo/wc3orc.png">
         <link
             rel="icon"
             type="image/png"
-            href="favicon-32x32.png">
+            href="assets/images/logo/wc3orc.png">
 
         <!-- Fonts -->
         <link
@@ -54,7 +54,7 @@
         <!-- Splash screen -->
         <fuse-splash-screen>
             <img
-                src="assets/images/logo/logo.svg"
+                src="assets/images/logo/wc3orc.png"
                 alt="Fuse logo">
             <div class="spinner">
                 <div class="bounce1"></div>
